config/activemq/deployment/amq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: active-mq
labels:
   app: active-mq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: active-mq
  template:
    metadata:
      labels:
          app: active-mq
    spec:
      serviceAccountName: runasanyuid
      securityContext:
        runAsUser: 100
      imagePullSecrets: 
         - name: azure-acr-credentials
      containers:
          - image: omsacr01.azurecr.io/util/active-mq:1.3
            name: active-mq
            imagePullPolicy: Always
            resources:
               requests:
                  memory: 500Mi
                  cpu: 200m
               limits:
                  memory: 1000Mi
                  cpu: 400m
            volumeMounts:
            - name: active-creds
              mountPath: /home/alpine/apache-activemq-5.17.1/conf/jetty-realm.properties
              subPath: jetty-realm.properties
      volumes:
      - name: active-creds
        secret:
          secretName: active-mq-credentials
      restartPolicy: Always
